--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.1.4",
+    "tailwindcss-hyphens": "^0.1.0",
     "vite": "^2.9.12"
   }
 }
