--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-vue": "^9.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "tailwindcss": "^3.1.4",
     "tailwindcss-hyphens": "^0.1.0",
     "vite": "^2.9.12"
