--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "pinia": "^2.0.14",
+    "smoothscroll-polyfill": "^0.4.4",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
