--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,12 @@
 {
   "tabWidth": 2,
-  "printWidth": 120,
+  "printWidth": 80,
   "semi": false,
   "singleQuote": true,
   "trailingComma": "none",
   "arrowParens": "avoid",
   "bracketSpacing": true,
-  "bracketSameLine": false,
+  "bracketSameLine": true,
   "jsxBracketSameLine": false,
   "singleAttributePerLine": true,
   "overrides": [
