--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "ntl-dev": "vite build --mode production",
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
@@ -26,6 +27,7 @@
     "prettier-plugin-tailwindcss": "^0.1.11",
     "tailwindcss": "^3.1.4",
     "tailwindcss-hyphens": "^0.1.0",
-    "vite": "^2.9.12"
+    "vite": "^2.9.12",
+    "vite-plugin-html": "^3.2.0"
   }
 }
