build: added VueUse as dep

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vueuse/core": "^8.9.2",
     "pinia": "^2.0.14",
     "smoothscroll-polyfill": "^0.4.4",
     "tailwind-scrollbar-hide": "^1.1.7",
