--- a/netlify.toml
+++ b/netlify.toml
@@ -3,11 +3,11 @@
 
 [context.production.environment]
   NODE_ENV = "production"
-  BASE_URL = "https://inspirebreda.nl"
+  BASE_URL = "https://mijnmacmekkert.nl"
 
 [context.development]
   command = "npm run ntl-dev"
 
 [context.development.environment]
   NODE_ENV = "development"
-  BASE_URL = "https://development.inspirebreda.nl"
+  BASE_URL = "https://development.mijnmacmekkert.nl"
