--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   command = "npm run build:prod"
 
 [context.production.environment]
-  NODE_ENV = "production"
+  NODE_ENV = "development"
   VITE_BASE_URL = "https://mijnmacmekkert.nl"
 
 [context.development]
