--- a/netlify.toml
+++ b/netlify.toml
@@ -3,11 +3,11 @@
 
 [context.production.environment]
   NODE_ENV = "development"
-  VITE_BASE_URL = "https://inspirebreda.nl/"
+  VITE_BASE_URL = "https://inspirebreda.nl"
 
 [context.development]
   command = "npm run build"
 
 [context.development.environment]
   NODE_ENV = "development"
-  VITE_BASE_URL = "https://development.inspirebreda.nl/"
+  VITE_BASE_URL = "https://development.inspirebreda.nl"
