--- a/netlify.toml
+++ b/netlify.toml
@@ -14,3 +14,10 @@
 
 [dev]
   targetPort = 3000
+
+[branches."feat/**"]
+  command = "npm run build"
+
+[branches."feat/**".environment]
+  NODE_ENV = "development"
+  VITE_BASE_URL = "https://development.inspirebreda.nl"
