--- a/netlify.toml
+++ b/netlify.toml
@@ -21,3 +21,10 @@
 [context.branch-deploy.environment]
   NODE_ENV = "development"
   VITE_BASE_URL = "https://development.inspirebreda.nl"
+
+[context.dev]
+  command = "npm run build"
+
+[context.dev.environment]
+  NODE_ENV = "development"
+  VITE_BASE_URL = "https://development.inspirebreda.nl"
